--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,17 +8,35 @@
     "jsx": "preserve",
     "sourceMap": true,
     "resolveJsonModule": true,
-     // 单元测试的支持
-     "types": ["vitest/globals"],
+    // 单元测试的支持
+    "types": [
+      "vitest/globals",
+      "pinia-plugin-persistedstate"
+    ],
     "isolatedModules": true,
     "esModuleInterop": true,
-    "lib": ["ESNext", "DOM"],
+    "lib": [
+      "ESNext",
+      "DOM"
+    ],
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": [
+        "src/*"
+      ]
     }
   },
-  "include": ["src/**/*.ts","src/**/*.d.ts","src/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue"
+  ],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ]
 }
