--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "markdown-it": "^14.1.0",
     "masonry-layout": "^4.2.2",
     "pinia": "^3.0.4",
-    "pinia-plugin-persist": "^1.0.0",
+    "pinia-plugin-persistedstate": "^4.7.1",
     "reka-ui": "^2.7.0",
     "sparticles": "^1.3.1",
     "tailwind-merge": "^3.4.0",
